--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-13  Shaun McCance  <shaunm@gnome.org>
+
+	* data/ui/yelp.glade:
+	* src/yelp-bookmarks.c:
+	- Bookmarks improvements
+
 2005-01-10  Shaun McCance  <shaunm@gnome.org>
 
 	* data/toc.xml.in:
