--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-01-13  Shaun McCance  <shaunm@gnome.org>
 
+	* NEWS:
+	* configure.in:
+	- Version 2.9.3
+
+2005-01-13  Shaun McCance  <shaunm@gnome.org>
+
 	* data/ui/yelp.glade:
 	* src/yelp-bookmarks.c:
 	- Bookmarks improvements
