--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Changes in 2.9.3:
+-----------------
+* Bookmark improvements (Don Scorgie, shaunm)
+* Added the beloved navigation bar to the bottom of pages (shaunm)
+* Improvements to the Find toolbar (shaunm)
+* Got everything XMLified, no more old HTML (shaunm)
+* Updated translations:
+  bg      (Vladimir Petkov)
+  cs      (Miloslav Trmac)
+  de      (Hendrik Brandt)
+  en_CA   (Adam Weinberger)
+  es      (Francisco Javier F. Serrador)
+  et      (Priit Laes)
+  ja      (Satoru SATOH)
+  lt      (Žygimantas Beručka)
+  nb      (Kjartan Maraas)
+  nl      (Tino Meinen)
+  no      (Kjartan Maraas)
+  sv      (Christian Rose)
+
 Changes in 2.9.2:
 -----------------
 * Added bookmarks, with much work frm Don Scorgie
