Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2005-01-11 22:18-0400\n"
+"POT-Creation-Date: 2005-01-13 23:57-0500\n"
+"PO-Revision-Date: 2005-01-13 22:18-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -189,9 +189,8 @@ msgid "<b>Fonts</b>"
 msgstr "<b>Fonts</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Bookmarks:</b>"
-msgstr "_Bookmarks"
+msgstr "<b>_Bookmarks:</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
@@ -223,7 +222,7 @@ msgstr "Preferences"
 
 #: data/ui/yelp.glade.h:11
 msgid "Re_name"
-msgstr ""
+msgstr "Re_name"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
@@ -307,9 +306,8 @@ msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr "A bookmark titled <b>%s</b> already exists for this page."
 
 #: src/yelp-bookmarks.c:341
-#, fuzzy
 msgid "Document Sections"
-msgstr "Document Information"
+msgstr "Document Sections"
 
 #: src/yelp-db-pager.c:238
 #, c-format
