Updated Spanish translation.
2005-01-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.x
+
 2005-01-13  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
@@ -6,7 +10,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2005-01-13  Satoru SATOH <ss@gnome.gr.jp>
+2005-01-13  Satoru SATOH <ss@gnome-gr.jp>
 
 	* ja.po: Updated Japanese translation.
 
