--- a/po/es.po
+++ b/po/es.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2005-01-12 02:23+0100\n"
+"POT-Creation-Date: 2005-01-15 02:57+0100\n"
+"PO-Revision-Date: 2005-01-15 02:58+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -195,9 +195,8 @@ msgid "<b>Fonts</b>"
 msgstr "<b>Tipografías</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Bookmarks:</b>"
-msgstr "_Marcadores"
+msgstr "<b>_Marcadores:</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
@@ -229,7 +228,7 @@ msgstr "Preferencias"
 
 #: data/ui/yelp.glade.h:11
 msgid "Re_name"
-msgstr ""
+msgstr "Re_nombrar"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
@@ -313,9 +312,8 @@ msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr "Ya existe un marcador titulado <b>%s</b> para esta página."
 
 #: src/yelp-bookmarks.c:341
-#, fuzzy
 msgid "Document Sections"
-msgstr "Información del documento"
+msgstr "Secciones del documento"
 
 #: src/yelp-db-pager.c:238
 #, c-format
@@ -596,8 +594,7 @@ msgstr "Navegador de ayuda"
 
 #: src/yelp-window.c:697 src/yelp-window.c:830
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
-"El Identificador Uniforme de Recurso (URI) para el archivo es inválido."
+msgstr "El Identificador Uniforme de Recurso (URI) para el archivo es inválido."
 
 #: src/yelp-window.c:709 src/yelp-window.c:825
 #, c-format
@@ -1006,3 +1003,4 @@ msgstr "Obtenga ayuda acerca de Gnome"
 
 #~ msgid "Warning"
 #~ msgstr "Atención"
+
