--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-18  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-01-17  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
