--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-01-18  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-bookmarks.c:
+	- More bookmark love from Don Scorgie
+
+	* src/yelp-info-pager.c:
+	* src/yelp-man-pager.c:
+	- Fixed build failures from renamed #defines
+
 2005-01-17  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
