- Fix up prev/next stuff
* src/yelp-window.c:
* src/yelp-xslt-pager.c:
* stylesheets/db2html.xsl.in:
- Fix up prev/next stuff

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-01-19  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	* src/yelp-xslt-pager.c:
+	* stylesheets/db2html.xsl.in:
+	- Fix up prev/next stuff
+
+2005-01-19  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-html-gecko.c:
 	* src/yelp-html.h:
 	* src/yelp-window.c:
