--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-20  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- Pass the max_depth parameter
+
 2005-01-19  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
